; ModuleID = '/home/carl/AnghaBench/git/t/helper/extr_test-sigchain.c_cmd__sigchain.c'
source_filename = "/home/carl/AnghaBench/git/t/helper/extr_test-sigchain.c_cmd__sigchain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIGTERM = common dso_local global i32 0, align 4
@one = common dso_local global i32 0, align 4
@two = common dso_local global i32 0, align 4
@three = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cmd__sigchain(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %5 = load i32, i32* @SIGTERM, align 4
  %6 = load i32, i32* @one, align 4
  %7 = call i32 @sigchain_push(i32 %5, i32 %6)
  %8 = load i32, i32* @SIGTERM, align 4
  %9 = load i32, i32* @two, align 4
  %10 = call i32 @sigchain_push(i32 %8, i32 %9)
  %11 = load i32, i32* @SIGTERM, align 4
  %12 = load i32, i32* @three, align 4
  %13 = call i32 @sigchain_push(i32 %11, i32 %12)
  %14 = load i32, i32* @SIGTERM, align 4
  %15 = call i32 @raise(i32 %14)
  ret i32 0
}

declare dso_local i32 @sigchain_push(i32, i32) #1

declare dso_local i32 @raise(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
